chore: updates and Dockerfile
